yeah, i did it, i fix scrollbar well

--- a/src/components/board/column/body/style.module.scss
+++ b/src/components/board/column/body/style.module.scss
@@ -1,3 +1,5 @@
 .column-body :global {
   @apply w-[285px] list-none overflow-y-auto;
+  max-height: 60vh;
+  overflow: auto;
 }
